fix long shell command

--- a/_posts/2013-04-13-cd.md
+++ b/_posts/2013-04-13-cd.md
@@ -13,7 +13,9 @@ tags:
 在***nix**系统中，shell命令就是你的工具箱，它可以帮助你完成各种各样的任务。于是就有人好奇，平常用的最多的命令是啥啊?于是乎，[某命令](http://coolshell.cn/articles/8619.html)就出现了
 
 ```bash
-$ history | awk '{CMD[$2]++;count++;} END { for (a in CMD )print CMD[a] " " CMD[a]/count*100 "% " a }' | grep -v "./" | column -c3 -s " " -t | sort -nr | nl | head -n10
+$ history | awk '{CMD[$2]++;count++;} END { for (a in CMD )print CMD[a] \
+$ " " CMD[a]/count*100 "% " a }' | grep -v "./" | column -c3 -s " " -t | \
+$ sort -nr | nl | head -n10
 1    295  29.5%  ls
 2    189  18.9%  cd
 3    133  13.3%  vim
