modify new blog

--- a/_posts/2013-04-19-blog.md
+++ b/_posts/2013-04-19-blog.md
@@ -20,6 +20,8 @@ tags:
 
 后来看了阮一峰的这篇[blog](http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html)，才知道，原来这条路就在这里，只不过何时走的问题
 
+不过从技术发展的角度来说，第一个阶段是使用别人产品的阶段，第二个阶段是使用IaaS的阶段，第三个阶段是使用PaaS的阶段。看来我也挺紧跟时代发展的。
+
 如果要在Github上面搭建blog，需要一些组件合作才能完成。整个系统搭建需要这些组件
 
 * Jekyll
