--- a/_posts/2013-04-19-blog.md
+++ b/_posts/2013-04-19-blog.md
@@ -8,9 +8,10 @@ tags:
 ---
 {% include JB/setup %}
 
-从2004年开始写博，刚开始是在[bulaoge](bulaoge.com/?llbgurs)上面的，量少的很。今年开始，突然想自己搭建个blog，于是元旦花了时间在Amazon的EC2上面，用Django搭建了一个[blog](www.linbo.org/blog)(近期应该会把它停掉)。最近又迷上了Jekyll，于是前几天又把blog迁到github上面了。
+从2004年开始写博，刚开始是在[bulaoge](http://bulaoge.com/?llbgurs)上面的，量少的很。今年开始，突然想自己搭建个blog，于是元旦花了时间在Amazon的EC2上面，用Django搭建了一个[blog](http://www.linbo.org/blog)(近期应该会把它停掉)。最近又迷上了Jekyll，于是前几天又把blog迁到github上面了。
 
 对Django部署的blog一直不太满意，主要是
+
 1. 页面太丑了，但是懒的整它
 2. 里面的代码不能高亮
 3. 部署起来也有点麻烦
@@ -24,38 +25,50 @@ tags:
 
 如果要在Github上面搭建blog，需要一些组件合作才能完成。整个系统搭建需要这些组件
 
-* Jekyll
-Ruby开发的静态网站生成器，Github被Star了1w多次，我的妈妈呀。Ruby开发的产品总有股创造性在里面，比如Vagrant, Github, Redcarpet。当然Ruby语言本身也很有创造性，实在想不出居然是日本人发明的。
+* [Jekyll](https://github.com/mojombo/jekyll)
+
+Ruby开发的静态网站生成器，Github被Star了1w多次，我的妈妈呀。Ruby开发的产品总有股创造性在里面，比如[Vagrant](http://www.vagrantup.com/), Github, Redcarpet。当然Ruby语言本身也很有创造性，实在想不出居然是日本人发明的。
 
 * Pygments
+
 Python开发的语法高亮产品，牛x的[Pocoo](http://www.pocoo.org/)出品。Pocoo有很多大名鼎鼎的Python产品，比如web开发框架Flask，WSGI组件Werkzeug，模板引擎Jinja2，文档生成器Sphinx。
 
 * Git
+
 上帝说，要有一个自由的操作系统，于是大神Linus Torvalds开发出了Linux。上帝说，要有分布式的版本控制系统，于是大神Linus Torvalds开发出了Git。就这样，世界从蛮荒进入了文明时代。
 
 * Github
+
 没话说，世界从石器时代进入到信息时代
 
 * Redcarpet
+
 Markdown渲染引擎，Github自己人开发的
 
 * Liquid
+
 模板渲染引擎
 
 * 第三方的评论系统
+
 著名的[Disqus](http://www.disqus.com/)，不过考虑到Disqus是和Facebook和Twitter整合在一起的，而这些代表世界先进文化的前进方向的产品，额，你懂得。所以现在用的是国内的[多说](http://duoshuo.com/)，多说和国内的一些douban，weibo整合的也不错。
 
 如果你想玩一玩Jekyll，需要有下面的一点知识
+
 * HTML + Css + Javascript
+
 没办法，虽然Jekyll有很多theme可以使用，但是如果你想自己设计页面的话，前端三剑客必不可少。幸亏不需要精通，了解一点就足够了。
 
 * Git
+
 如果你不用Github，而且自己搭建的话，Git不是必须的。但是建议你使用它，因为你会了它，世界将会很美好
 
 * MarkDown
+
 记得以前写wiki那个痛苦，手册好长，找个标记吐血啊。MarkDown很简洁，很好，用来写Blog足够了。关键学习成本很低，不到半小时决定得心应手了。
 
 * 模板语法知识
+
 这里说的模板，指的是web开发框架的模板。如果你懂Django的模板，懂Jinja2，那么Liquid模板的语法。如果你写过几句代码，它们真的很简单
 
 其实，为什么喜欢用Jekyll，简单当然是一方面。更重要的是，总有些人，有些公司，在做正能量的产品，使用着这些充满正能量的产品，耳濡目染，说不定哪天我也充满了正能量。
