--- a/_posts/2013-04-19-blog.md
+++ b/_posts/2013-04-19-blog.md
@@ -15,7 +15,7 @@ tags:
 1. 页面太丑了，但是懒的整它
 2. 里面的代码不能高亮
 3. 部署起来也有点麻烦
-4. Amazon的EC2第一年是免费的，但是后面就要钱的，呜呜
+4. Amazon的EC2第一年是免费的，但是后面就要钱的，呜呜  
 
 总而言之，复杂，所以当第一眼看到Jekyll就喜欢上了，太简洁了。整个系统连数据库都不需要了，只需要关注写blog本身，而且还带有点Geek的味道。
 
@@ -63,13 +63,13 @@ Markdown渲染引擎，Github自己人开发的
 
 如果你不用Github，而且自己搭建的话，Git不是必须的。但是建议你使用它，因为你会了它，世界将会很美好
 
-* MarkDown
+* [MarkDown](http://wowubuntu.com/markdown/)
 
 记得以前写wiki那个痛苦，手册好长，找个标记吐血啊。MarkDown很简洁，很好，用来写Blog足够了。关键学习成本很低，不到半小时决定得心应手了。
 
 * 模板语法知识
 
-这里说的模板，指的是web开发框架的模板。如果你懂Django的模板，懂Jinja2，那么Liquid模板的语法。如果你写过几句代码，它们真的很简单
+这里说的模板，指的是web开发框架的模板。如果你懂Django的模板，懂Jinja2，那么Liquid模板的语法也不在话下。如果你写过几句代码，它们真的很简单
 
 其实，为什么喜欢用Jekyll，简单当然是一方面。更重要的是，总有些人，有些公司，在做正能量的产品，使用着这些充满正能量的产品，耳濡目染，说不定哪天我也充满了正能量。
 
