--- a/_posts/2013-04-13-cd.md
+++ b/_posts/2013-04-13-cd.md
@@ -10,7 +10,7 @@ tags:
 {% include JB/setup %}
 
 # 缘起
-在***nix**系统中，shell命令就是你的工具箱，它可以帮助你完成各种各样的任务。于是就有人好奇，平常用的最多的命令是啥啊?于是乎，[某命令](http://coolshell.cn/articles/8619.html)就出现了
+在**nix**系统中，shell命令就是你的工具箱，它可以帮助你完成各种各样的任务。于是就有人好奇，平常用的最多的命令是啥啊?于是乎，[某命令](http://coolshell.cn/articles/8619.html)就出现了
 
 ```bash
 $ history | awk '{CMD[$2]++;count++;} END { for (a in CMD )print CMD[a] \
@@ -28,7 +28,7 @@ $ sort -nr | nl | head -n10
 10   14   1.4%   clear
 ```
 
-瞧，这就是我的命令使用情况，cd排名第二。看来在***nix**寻路是一件再平常不过的事情了。于是乎，敢问路在何方?
+瞧，这就是我的命令使用情况，cd排名第二。看来在**nix**寻路是一件再平常不过的事情了。于是乎，敢问路在何方?
 
 # cd以及相关命令
 要想到某个目录，直接`cd`命令就可以了，而且`cd`命令还支持绝对路径和相对路径。但是，但是，每次都要在几个目录里跳来跳去，烦啊
