--- a/_posts/2013-04-19-blog.md
+++ b/_posts/2013-04-19-blog.md
@@ -8,7 +8,7 @@ tags:
 ---
 {% include JB/setup %}
 
-从2004年开始写博，刚开始是在[bulaoge](http://bulaoge.com/?llbgurs)上面的，量少的很。今年开始，突然想自己搭建个blog，于是元旦花了时间在Amazon的EC2上面，用Django搭建了一个[blog](http://www.linbo.org/blog)(近期应该会把它停掉)。最近又迷上了Jekyll，于是前几天又把blog迁到github上面了。
+从2004年开始写博，刚开始是在[bulaoge](http://bulaoge.com/?llbgurs)上面的，量少的很。今年开始，突然想自己搭建个blog，于是元旦花了时间在Amazon的EC2上面，用Django搭建了一个[blog](http://www.linbo.org/blog)(近期应该会把它停掉)。最近又迷上了Jekyll，于是前几天又把blog迁到[github上面](https://github.com/linbo/linbo.github.com)了。
 
 对Django部署的blog一直不太满意，主要是
 
@@ -16,6 +16,7 @@ tags:
 2. 里面的代码不能高亮
 3. 部署起来也有点麻烦
 4. Amazon的EC2第一年是免费的，但是后面就要钱的，呜呜  
+
 
 总而言之，复杂，所以当第一眼看到Jekyll就喜欢上了，太简洁了。整个系统连数据库都不需要了，只需要关注写blog本身，而且还带有点Geek的味道。
 
@@ -71,6 +72,6 @@ Markdown渲染引擎，Github自己人开发的
 
 这里说的模板，指的是web开发框架的模板。如果你懂Django的模板，懂Jinja2，那么Liquid模板的语法也不在话下。如果你写过几句代码，它们真的很简单
 
-其实，为什么喜欢用Jekyll，简单当然是一方面。更重要的是，总有些人，有些公司，在做正能量的产品，使用着这些充满正能量的产品，耳濡目染，说不定哪天我也充满了正能量。
+其实，为什么喜欢用Jekyll，简单当然是一方面。更重要的是，__总有些人，有些公司，在做正能量的产品，使用着这些充满正能量的产品，耳濡目染，说不定哪天我也充满了正能量__。
 
 如果你也想写blog，建议你试试Jekyll+Github，免费，然后你会更喜欢写blog。不信？试试吧。
