--- a/_posts/2013-04-19-blog.md
+++ b/_posts/2013-04-19-blog.md
@@ -66,7 +66,7 @@ Markdown渲染引擎，Github自己人开发的
 
 * [MarkDown](http://wowubuntu.com/markdown/)
 
-记得以前写wiki那个痛苦，手册好长，找个标记吐血啊。MarkDown很简洁，很好，用来写Blog足够了。关键学习成本很低，不到半小时决定得心应手了。
+记得以前写wiki那个痛苦，手册好长，找个标记吐血啊。MarkDown很简洁，很好，用来写Blog足够了。关键学习成本很低，不到半小时绝对得心应手了。
 
 * 模板语法知识
 
