add gnome shell icon

--- a/_posts/2013-05-17-ubuntu.md
+++ b/_posts/2013-05-17-ubuntu.md
@@ -4,7 +4,7 @@ title: "Ubuntu杂记"
 description: ""
 category: IT
 tags: 
-   - 工
+    - ubuntu
 ---
 {% include JB/setup %}
 用Ubuntu也大半年了，碰到两个大问题，留贴纪念一下
