--- a/books/autumn.tex
+++ b/books/autumn.tex
@@ -1,6 +1,6 @@
 \chapter{冷清秋}
 \thispagestyle{empty}
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{冷清秋}
 \settowidth{\versewidth}{寒月夜，冷清秋}
 \begin{verse}[\versewidth]
@@ -13,7 +13,7 @@
 孤醉
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{秋别}
 \settowidth{\versewidth}{秋风不知离别味}
 \begin{verse}[\versewidth]
@@ -23,7 +23,7 @@
 清酒一杯话当年
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{秋散}
 \settowidth{\versewidth}{秋风不知离别味}
 \begin{verse}[\versewidth]
@@ -33,7 +33,7 @@
 一池秋水望天月
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{秋吟}
 \settowidth{\versewidth}{惜南国之秋无色}
 \begin{verse}[\versewidth]
@@ -45,7 +45,7 @@
 \end{verse}
 \newpage
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{秋晨}
 \settowidth{\versewidth}{清秋的初晨}
 \begin{verse}[\versewidth]
