--- a/books/girls.tex
+++ b/books/girls.tex
@@ -1,6 +1,6 @@
 \chapter{给女孩的诗}
 \thispagestyle{empty}
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{女孩的美}
 \settowidth{\versewidth}{女孩眠着嘴}
 \begin{verse}[\versewidth]
