--- a/books/goodbye.tex
+++ b/books/goodbye.tex
@@ -1,6 +1,6 @@
 \chapter{离别}
 \thispagestyle{empty}
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{别嘉定}
 \settowidth{\versewidth}{风且住，水莫流，此时凝睇，最是春好处}
 \begin{verse}[\versewidth]
@@ -13,7 +13,7 @@
 别悲伤，重抖擞，此去经年，仍可梦中游\\
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{别兄弟(一)}
 \settowidth{\versewidth}{心怀大志不偏安}
 \begin{verse}[\versewidth]
@@ -24,7 +24,7 @@
 骄阳明月仍在天
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{别兄弟(二)}
 \settowidth{\versewidth}{心怀大志不偏安}
 \begin{verse}[\versewidth]
@@ -34,7 +34,7 @@
 凿它一条上青天
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{别姐妹}
 \settowidth{\versewidth}{MOS数载功勋卓}
 \begin{verse}[\versewidth]
