--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -1,7 +1,7 @@
 \chapter{波心荡}
 \thispagestyle{empty}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{战书}
 \settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
@@ -18,7 +18,7 @@
 免遭屠戮 
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{天空的眼泪}
 \settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
