--- a/books/school.tex
+++ b/books/school.tex
@@ -1,6 +1,6 @@
 \chapter{学生年代}
 \thispagestyle{empty}
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{骆驼}
 \settowidth{\versewidth}{不愿做拉磨的骡子}
 \begin{verse}[\versewidth]
@@ -14,7 +14,7 @@
 留下自己的脚印!
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{爱情组诗}
 \settowidth{\versewidth}{爱情是什么}
 \begin{verse}[\versewidth]
@@ -40,7 +40,7 @@
 \end{verse}
 \newpage
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{摩登时代}
 \settowidth{\versewidth}{摩登时代}
 \begin{verse}[\versewidth]
@@ -62,7 +62,7 @@
 也被摩登时代甩了出去
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{日子}
 \settowidth{\versewidth}{再也不会因为梅西的进球而疯狂}
 \begin{verse}[\versewidth]
@@ -86,7 +86,7 @@
 \end{verse}
 \newpage
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{梦}
 \settowidth{\versewidth}{昨夜我做了一个梦}
 \begin{verse}[\versewidth]
@@ -121,7 +121,7 @@
 \vin—–大自然
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{眼镜}
 \settowidth{\versewidth}{默默的注视着花儿下面的刺}
 \begin{verse}[\versewidth]
@@ -137,7 +137,7 @@
 也可以滤去阳光地精华！\\
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{思考}
 \settowidth{\versewidth}{我说我正在思考}
 \begin{verse}[\versewidth]
