--- a/books/travel.tex
+++ b/books/travel.tex
@@ -1,6 +1,6 @@
 \chapter{旅行}
 \thispagestyle{empty}
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{阳朔行}
 \settowidth{\versewidth}{久仰桂林阳朔名，今朝有缘得相见}
 \begin{verse}[\versewidth]
@@ -19,7 +19,7 @@
 桂系早已风流去，阳朔漓江仍风光
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{盘龙峡}
 \settowidth{\versewidth}{久仰桂林阳朔名，今朝有缘得相见}
 \begin{verse}[\versewidth]
@@ -30,7 +30,7 @@
 别梦寒，温泉夜归时，蛙声一片\\
 \end{verse}
 
-\renewcommand{\poemtoc}{subsection}
+\renewcommand{\poemtoc}{section}
 \poemtitle{踏青}
 \settowidth{\versewidth}{踏青何处觅芳草}
 \begin{verse}[\versewidth]
