fix page number

--- a/books/autumn.tex
+++ b/books/autumn.tex
@@ -24,34 +24,25 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{秋散}
-\settowidth{\versewidth}{秋风不知离别味}
-\begin{verse}[\versewidth]
-金樽玉盘难下箸\\
-醉酒胡言情更切\\
-欲别却道好风景\\
-一池秋水望天月
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
 \poemtitle{秋吟}
 \settowidth{\versewidth}{惜南国之秋无色}
 \begin{verse}[\versewidth]
 惜南国之秋无色\\
 东北望\\
 怎奈故园东风无力\\
+~\\
 可知？\\
 江南之秋秋几许
 \end{verse}
-\newpage
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{秋晨}
-\settowidth{\versewidth}{清秋的初晨}
+\settowidth{\versewidth}{惜南国之秋无色}
 \begin{verse}[\versewidth]
 清秋的初晨\\
 阳光洒尽每一粒空气\\
 叶落满地\\
+~\\
 你把长发飘飘\\
 却不肯回眸微笑
 \end{verse}
