--- a/books/goodbye.tex
+++ b/books/goodbye.tex
@@ -1,11 +1,21 @@
 \chapter{离别}
 \thispagestyle{empty}
 \renewcommand{\poemtoc}{section}
+\poemtitle{离别}
+\settowidth{\versewidth}{秋风不知离别味}
+\begin{verse}[\versewidth]
+金樽玉盘难下箸\\
+醉酒胡言情更切\\
+欲别却道好风景\\
+一池秋水望天月
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
 \poemtitle{别嘉定}
 \settowidth{\versewidth}{风且住，水莫流，此时凝睇，最是春好处}
 \begin{verse}[\versewidth]
 
-\emph{\small{昨日，品明朝那些事，赏风之谷。及夜，风骤，思绪万千，难入眠}}
+\emph{\scriptsize{昨日，品明朝那些事，赏风之谷。及夜，风骤，思绪万千，难入眠}}
 
 风且住，水莫流，此时凝睇，最是春好处\\
 杯无酒，还回头，此地风景，最该常驻留\\
@@ -18,9 +28,9 @@
 \settowidth{\versewidth}{心怀大志不偏安}
 \begin{verse}[\versewidth]
 
-心怀大志不偏安，\\
+心怀大志不偏安\\
 青梅煮酒与谁论？\\
-莫道前路风景异，\\
+莫道前路风景异\\
 骄阳明月仍在天
 \end{verse}
 
@@ -28,9 +38,9 @@
 \poemtitle{别兄弟(二)}
 \settowidth{\versewidth}{心怀大志不偏安}
 \begin{verse}[\versewidth]
-遥看前路似蜀道，\\
+遥看前路似蜀道\\
 骏马十驾何它惧？\\
-我摘天星为君引，\\
+我摘天星为君引\\
 凿它一条上青天
 \end{verse}
 
@@ -39,8 +49,23 @@
 \settowidth{\versewidth}{MOS数载功勋卓}
 \begin{verse}[\versewidth]
 
-MOS数载功勋卓，\\
+MOS数载功勋卓\\
 又攀RAC另一峰\\
-放眼天下众男儿，\\
+放眼天下众男儿\\
 谁言巾帼让须眉？
 \end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{别甲骨}
+\settowidth{\versewidth}{MOS数载功勋卓}
+\begin{verse}[\versewidth]
+
+笑，笑，笑！\\
+笑半百甲骨，如狼似虎\\
+狮子开口敢不从？\\
+~\\
+错，错，错！\\
+错少年风流，莫能长驻\\
+心中有梦怎能阻?\\
+\end{verse}
+
