--- a/books/poems.tex
+++ b/books/poems.tex
@@ -29,6 +29,8 @@
 
 
 \begin{document}
+
+\frontmatter
 \renewcommand\contentsname{目录}
 \title{冷月无声}
 \author{波心荡}
@@ -41,9 +43,12 @@
 
 \tableofcontents
 \thispagestyle{empty}
+\mainmatter
+\input{my}
 \input{girls}
 \input{travel}
 \input{autumn}
+\input{congrats}
 \input{school}
 \input{poetry}
 \input{goodbye}
