--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -6,7 +6,7 @@
 \settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
 
-\emph{\footnotesize{小组技痒，向Dev下挑战书。于是老夫捉刀，豪言片语}}
+\emph{\scriptsize{小组技痒，向Dev下挑战书。于是老夫捉刀，豪言片语}}
 
 秋高气爽\ \ QA射雕\\
 铁骑所踏\ \ 无不臣服\\
