--- a/books/school.tex
+++ b/books/school.tex
@@ -1,22 +1,8 @@
 \chapter{学生年代}
 \thispagestyle{empty}
 \renewcommand{\poemtoc}{section}
-\poemtitle{骆驼}
-\settowidth{\versewidth}{不愿做拉磨的骡子}
-\begin{verse}[\versewidth]
-
-不愿做拉磨的骡子\\
-每天重复自己的过去\\
-不愿做飞奔的骏马\\
-每天可以疾驰多少里\\
-只愿做默默无闻的骆驼\\
-在最不可能留下足迹的沙漠里\\
-留下自己的脚印!
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
 \poemtitle{爱情组诗}
-\settowidth{\versewidth}{爱情是什么}
+\settowidth{\versewidth}{只留下风的记忆}
 \begin{verse}[\versewidth]
 
 爱情是什么?\\
@@ -42,7 +28,7 @@
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{摩登时代}
-\settowidth{\versewidth}{摩登时代}
+\settowidth{\versewidth}{你的每一份努力}
 \begin{verse}[\versewidth]
 
 摩登时代\\
@@ -64,7 +50,7 @@
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{日子}
-\settowidth{\versewidth}{再也不会因为梅西的进球而疯狂}
+\settowidth{\versewidth}{你的每一份努力}
 \begin{verse}[\versewidth]
 
 再也不会因为梅西的进球而疯狂\\
@@ -123,7 +109,7 @@
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{眼镜}
-\settowidth{\versewidth}{默默的注视着花儿下面的刺}
+\settowidth{\versewidth}{昨夜我做了一个梦}
 \begin{verse}[\versewidth]
 
 默默的注视着花儿下面的刺\\
@@ -136,6 +122,7 @@
 原来眼镜同窗户一样\\
 也可以滤去阳光地精华！\\
 \end{verse}
+\newpage
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{思考}
