--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -2,6 +2,56 @@
 \thispagestyle{empty}
 
 \renewcommand{\poemtoc}{section}
+\poemtitle{波心荡}
+\settowidth{\versewidth}{世人皆谓蜀道难}
+\begin{verse}[\versewidth]
+世人皆谓蜀道难\\
+我笑何人曾试攀？\\
+待与天公千杯醉\\
+一梦踏尽蜀汉山
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{夜饮}
+\settowidth{\versewidth}{花间一壶酒}
+\begin{verse}[\versewidth]
+花间一壶酒\\
+水中一弯月\\
+酒伴人销愁\\
+月伴人空瘦
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{温柔}
+\settowidth{\versewidth}{最是低头一温柔}
+\begin{verse}[\versewidth]
+最是低头一温柔\\
+胜似春风拂心头\\
+欲语牛郎织女夜\\
+却话一声道珍重
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{群英会}
+\settowidth{\versewidth}{群英邀我共赴会}
+\begin{verse}[\versewidth]
+群英邀我共赴会\\
+天公怎敢不作美\\
+纵使漫天飞雪舞\\
+寒江独钓岂一人?
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{独英会}
+\settowidth{\versewidth}{群英邀我共赴会}
+\begin{verse}[\versewidth]
+我邀群英共赴会\\
+天公竟也不作美\\
+漫天飞雪追逐戏\\
+寒江独钓仍一人!
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
 \poemtitle{战书}
 \settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
@@ -31,4 +81,96 @@
 那般地爱着大地\\
 终究化作天空的眼泪\\
 默默的滴落
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{忆故乡}
+\settowidth{\versewidth}{溪畔弯柳青青舒}
+\begin{verse}[\versewidth]
+故乡忆\\
+最忆是初春\\
+~\\
+溪畔弯柳青青舒\\
+一波绿水卷春来\\
+能不忆故乡？
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{鹏城四年}
+\settowidth{\versewidth}{四年偏安南隅中}
+\begin{verse}[\versewidth]
+
+四年偏安南隅中\\
+竟也一事仍无成\\
+回望少年风流梦\\
+一片热血洒刀枪
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{书言}
+\settowidth{\versewidth}{四年偏安南隅中}
+\begin{verse}[\versewidth]
+清茶一杯明月照\\
+枯灯半盏鸡声闻\\
+岂敢年华悄然逝\\
+闲坐白头梦少年\\
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{唱和}
+\settowidth{\versewidth}{弦断声可续}
+\begin{verse}[\versewidth]
+弦断声可续？\\
+古调谁人听\\
+甚好虫鸟声\\
+仍唱天地间
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{伊声}
+\settowidth{\versewidth}{浓睡愈憔悴}
+\begin{verse}[\versewidth]
+浓睡愈憔悴\\
+懒起倦梳头\\
+思君赏花泪\\
+奋起画峨眉
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{无题一}
+\settowidth{\versewidth}{风仍劲, 雪正紧}
+\begin{verse}[\versewidth]
+风仍劲, 雪正紧\\
+铁骑挺枪驱敌贼\\
+满天红花坠\\
+~\\
+酒更烈，鼓最鸣\\
+将军扬刀斩单于\\
+千里不留人
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{无题二}
+\settowidth{\versewidth}{风仍劲, 雪正紧}
+\begin{verse}[\versewidth]
+冷风浓，残花落\\
+满地嫩绿迎春来\\
+何人送春去\\
+~\\
+将军饮，伊人寐\\
+扬鞭策马弓箭行\\
+谁见梦中泪
+\end{verse}
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{无题三}
+\settowidth{\versewidth}{风仍劲, 雪正紧}
+\begin{verse}[\versewidth]
+雨夜冷，街角寂\\
+雨珠落地雨花溅\\
+雨中谁独行？\\
+~\\
+热泪涌，深巷幽\\
+泪珠成串泪如瀑\\
+泪中雨独行
 \end{verse}
