--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -69,6 +69,18 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
+\poemtitle{标点符号}
+\settowidth{\versewidth}{我满怀问号走进了你}
+\begin{verse}[\versewidth]
+我满怀问号走进了你\\
+得到的\\
+却全是句号\\
+没有分号\\
+也没有叹号\\
+\end{verse}
+
+
+\renewcommand{\poemtoc}{section}
 \poemtitle{天空的眼泪}
 \settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
