--- a/books/autumn.tex
+++ b/books/autumn.tex
@@ -4,12 +4,12 @@
 \poemtitle{冷清秋}
 \settowidth{\versewidth}{寒月夜，冷清秋}
 \begin{verse}[\versewidth]
-寒月夜，冷清秋，\\
-遥望嫦娥处，\\
+寒月夜，冷清秋\\
+遥望嫦娥处\\
 独舞\\
 ~\\
-酒正酣，故人辞，\\
-单影对饮时，\\
+酒正酣，故人辞\\
+单影对饮时\\
 孤醉
 \end{verse}
 
@@ -24,7 +24,7 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{秋吟}
+\poemtitle{江南秋}
 \settowidth{\versewidth}{惜南国之秋无色}
 \begin{verse}[\versewidth]
 惜南国之秋无色\\
@@ -45,4 +45,42 @@
 ~\\
 你把长发飘飘\\
 却不肯回眸微笑
+\end{verse}
+\newpage
+
+\renewcommand{\poemtoc}{section}
+\poemtitle{秋天的，最后一片叶}
+\settowidth{\versewidth}{无所事事，等待凋零}
+\begin{verse}[\versewidth]
+我是那\\
+秋天的最后一片叶\\
+~\\
+皮肤已经褪去，青春的记忆\\
+肌体也已干枯，没有往昔的活力\\
+抱紧枝干，等待凋零\\
+~\\
+做梦都想，狂风中飘去\\
+离开大地的风景，无数次想起\\
+看看兄弟，都已离去\\
+扑向山川、田野、江河\\
+不管哪里，都是大地\\
+等待化作春泥\\
+~\\
+天空阴霾，很是安静\\
+鸟儿不再栖上枝头，放声歌唱\\
+知了告别多时，从此没有了叹息\\
+~\\
+风已吹起，没人送行\\
+在风中摇曳，挥手告别高高的天空\\
+若是离开枝头，不知飘向何地\\
+~\\
+我已无力，遮风挡雨\\
+没有机会倾诉，曾经的足迹\\
+但是正如自己，都有过去的风景\\
+~\\
+我是那，秋天的最后一片叶\\
+时刻准备凋零\\
+我却不再恐惧，因为还有白雪\\
+抚摸着自己，然后\\
+永远的睡去
 \end{verse}
