--- a/books/goodbye.tex
+++ b/books/goodbye.tex
@@ -1,7 +1,7 @@
 \chapter{离别}
 \thispagestyle{empty}
 \renewcommand{\poemtoc}{section}
-\poemtitle{离别}
+\poemtitle{望天月}
 \settowidth{\versewidth}{秋风不知离别味}
 \begin{verse}[\versewidth]
 金樽玉盘难下箸\\
@@ -17,10 +17,10 @@
 
 \emph{\scriptsize{昨日，品明朝那些事，赏风之谷。及夜，风骤，思绪万千，难入眠}}
 
-风且住，水莫流，此时凝睇，最是春好处\\
-杯无酒，还回头，此地风景，最该常驻留\\
-花正谢，人已走，此处相逢，何时重聚首？\\
-别悲伤，重抖擞，此去经年，仍可梦中游\\
+风且住，水莫流。此时凝睇，最是春好处\\
+杯无酒，还回头。此地风景，最该常驻留\\
+花正谢，人已走。此处相逢，何时重聚首？\\
+别悲伤，重抖擞。此去经年，仍可梦中游\\
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
@@ -43,16 +43,17 @@
 我摘天星为君引\\
 凿它一条上青天
 \end{verse}
+\newpage
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{别姐妹}
 \settowidth{\versewidth}{MOS数载功勋卓}
 \begin{verse}[\versewidth]
 
-MOS数载功勋卓\\
-又攀RAC另一峰\\
-放眼天下众男儿\\
-谁言巾帼让须眉？
+\makebox[77pt][s]{MOS数载功勋卓}\\
+\makebox[77pt][s]{又攀RAC另一峰}\\
+\makebox[77pt][s]{放眼天下众男儿}\\
+\makebox[77pt][s]{谁言巾帼让须眉}？
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
@@ -60,11 +61,11 @@ MOS数载功勋卓\\
 \settowidth{\versewidth}{MOS数载功勋卓}
 \begin{verse}[\versewidth]
 
-笑，笑，笑！\\
+笑，笑，笑\\
 笑半百甲骨，如狼似虎\\
 狮子开口敢不从？\\
 ~\\
-错，错，错！\\
+错，错，错\\
 错少年风流，莫能长驻\\
 心中有梦怎能阻?\\
 \end{verse}
