--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -2,66 +2,16 @@
 \thispagestyle{empty}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{波心荡}
-\settowidth{\versewidth}{世人皆谓蜀道难}
-\begin{verse}[\versewidth]
-世人皆谓蜀道难\\
-我笑何人曾试攀？\\
-待与天公千杯醉\\
-一梦踏尽蜀汉山
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{夜饮}
-\settowidth{\versewidth}{花间一壶酒}
-\begin{verse}[\versewidth]
-花间一壶酒\\
-水中一弯月\\
-酒伴人销愁\\
-月伴人空瘦
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{温柔}
-\settowidth{\versewidth}{最是低头一温柔}
-\begin{verse}[\versewidth]
-最是低头一温柔\\
-胜似春风拂心头\\
-欲语牛郎织女夜\\
-却话一声道珍重
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{群英会}
-\settowidth{\versewidth}{群英邀我共赴会}
-\begin{verse}[\versewidth]
-群英邀我共赴会\\
-天公怎敢不作美\\
-纵使漫天飞雪舞\\
-寒江独钓岂一人?
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{独英会}
-\settowidth{\versewidth}{群英邀我共赴会}
-\begin{verse}[\versewidth]
-我邀群英共赴会\\
-天公竟也不作美\\
-漫天飞雪追逐戏\\
-寒江独钓仍一人!
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
 \poemtitle{战书}
 \settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
 
-\emph{\scriptsize{小组技痒，向Dev下挑战书。于是老夫捉刀，豪言片语}}
+\centerline{\emph{\scriptsize{小组技痒，向Dev下挑战书。于是老夫捉刀，豪言片语}}}
 
-秋高气爽\ \ QA射雕\\
+\makebox[87pt][s]{秋高气爽\ \ QA射雕}\\
 铁骑所踏\ \ 无不臣服\\
 甲骨诸国\ \ 兵败千里\\
-今统精兵良将\ \ bug万千\\
+今统良将精兵\ \ bug万千\\
 欲与足下会猎于科北\\
 切磋技艺\ \ 逐鹿中原\\
 盼足下养精蓄锐\\
@@ -70,12 +20,12 @@
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{标点符号}
-\settowidth{\versewidth}{我满怀问号走进了你}
+\settowidth{\versewidth}{秋高气爽 QA射雕}
 \begin{verse}[\versewidth]
 我满怀问号走进了你\\
 得到的\\
 却全是句号\\
-没有分号\\
+没有逗号\\
 也没有叹号\\
 \end{verse}
 
@@ -94,10 +44,11 @@
 终究化作天空的眼泪\\
 默默的滴落
 \end{verse}
+\newpage
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{忆故乡}
-\settowidth{\versewidth}{溪畔弯柳青青舒}
+\settowidth{\versewidth}{风仍劲, 雪正紧}
 \begin{verse}[\versewidth]
 故乡忆\\
 最忆是初春\\
@@ -107,52 +58,12 @@
 能不忆故乡？
 \end{verse}
 
-\renewcommand{\poemtoc}{section}
-\poemtitle{鹏城四年}
-\settowidth{\versewidth}{四年偏安南隅中}
-\begin{verse}[\versewidth]
-
-四年偏安南隅中\\
-竟也一事仍无成\\
-回望少年风流梦\\
-一片热血洒刀枪
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{书言}
-\settowidth{\versewidth}{四年偏安南隅中}
-\begin{verse}[\versewidth]
-清茶一杯明月照\\
-枯灯半盏鸡声闻\\
-岂敢年华悄然逝\\
-闲坐白头梦少年\\
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{唱和}
-\settowidth{\versewidth}{弦断声可续}
-\begin{verse}[\versewidth]
-弦断声可续？\\
-古调谁人听\\
-甚好虫鸟声\\
-仍唱天地间
-\end{verse}
-
-\renewcommand{\poemtoc}{section}
-\poemtitle{伊声}
-\settowidth{\versewidth}{浓睡愈憔悴}
-\begin{verse}[\versewidth]
-浓睡愈憔悴\\
-懒起倦梳头\\
-思君赏花泪\\
-奋起画峨眉
-\end{verse}
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{无题一}
 \settowidth{\versewidth}{风仍劲, 雪正紧}
 \begin{verse}[\versewidth]
-风仍劲, 雪正紧\\
+风仍劲，雪正紧\\
 铁骑挺枪驱敌贼\\
 满天红花坠\\
 ~\\
@@ -165,7 +76,7 @@
 \poemtitle{无题二}
 \settowidth{\versewidth}{风仍劲, 雪正紧}
 \begin{verse}[\versewidth]
-冷风浓，残花落\\
+冷风浓，残花败\\
 满地嫩绿迎春来\\
 何人送春去\\
 ~\\
