--- a/books/school.tex
+++ b/books/school.tex
@@ -3,13 +3,14 @@
 \renewcommand{\poemtoc}{section}
 \poemtitle{爱情组诗}
 \settowidth{\versewidth}{只留下风的记忆}
+\setlength{\vgap}{1em}
 \begin{verse}[\versewidth]
 
 爱情是什么?\\
 ~\\
 是风\\
-\vin  来无影去无踪\\
-\vin  只留下风的记忆\\
+\vin 来无影去无踪\\
+\vin 只留下风的记忆\\
 是雨\\
 \vin  从天而降\\
 \vin  潜入泥中\\
@@ -45,7 +46,7 @@
 你困了，打了个哈欠\\
 正准备做个美梦\\
 结果连美梦\\
-也被摩登时代甩了出去
+也被甩了出去
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
@@ -78,8 +79,8 @@
 \begin{verse}[\versewidth]
 
 昨夜我做了一个梦\\
-~\\
 在乡间的小路上\\
+~\\
 我恭敬的对野草点头\\
 我谦卑的朝小虫哈腰\\
 我低声的同青山问好\\
@@ -104,7 +105,7 @@
 ~\\
 我兴奋的朝世界大声呼喊\\
 因为我梦见了\\
-\vin—–大自然
+\vin\vin---大自然
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
@@ -120,7 +121,7 @@
 刺上的花微笑着摘掉我的眼镜\\
 我恍然大悟\\
 原来眼镜同窗户一样\\
-也可以滤去阳光地精华！\\
+也可以滤去阳光地精华\\
 \end{verse}
 \newpage
 
