--- a/books/travel.tex
+++ b/books/travel.tex
@@ -14,7 +14,7 @@
 苏秦不在遭屠戮，浑然不知湿全身\\
 意犹未尽下漓江，二十纸币最嚣张\\
 卧龙凤雏困龙潭，甚比曹公误徐郎\\
-蝴蝶泉里无梁祝，苗花侗花来充数\\
+蝴蝶泉里无梁祝，侗花苗花来充数\\
 外佬翻滚月亮山，吾等梦会刘姐三\\
 桂系早已风流去，阳朔漓江仍风光
 \end{verse}
@@ -34,8 +34,8 @@
 \poemtitle{踏青}
 \settowidth{\versewidth}{踏青何处觅芳草}
 \begin{verse}[\versewidth]
-踏青何处觅芳草，\\
-温泉竟溢酒花香。\\
-纵使漫天繁星耀，\\
+踏青何处觅芳草\\
+温泉竟溢酒花香\\
+纵使漫天繁星耀\\
 却进小楼论三国
 \end{verse}
