--- a/books/girls.tex
+++ b/books/girls.tex
@@ -43,7 +43,7 @@
 \end{verse}
 \newpage
 
-\poemtitle{悲剧·喜剧}
+\poemtitle{悲剧{\small·}喜剧}
 \settowidth{\versewidth}{你绝望的，踩着}
 \begin{verse}[\versewidth]
 
