--- a/books/moon.tex
+++ b/books/moon.tex
@@ -12,7 +12,7 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{梦踏蜀山}
+\poemtitle{醉梦山}
 \settowidth{\versewidth}{世人皆谓蜀道难}
 \begin{verse}[\versewidth]
 世人皆谓蜀道难\\
@@ -64,7 +64,7 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{书言}
+\poemtitle{少年行}
 \settowidth{\versewidth}{四年偏安南隅中}
 \begin{verse}[\versewidth]
 清茶一杯明月照\\
@@ -74,12 +74,12 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{书}
+\poemtitle{行路}
 \settowidth{\versewidth}{四年偏安南隅中}
 \begin{verse}[\versewidth]
 闲翻杂书万千卷\\
 笑看人间千百态\\
-何惧前锋百十转\\
+何惧前峰百十转\\
 共踏最险十八弯\\
 \end{verse}
 
