--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -60,7 +60,7 @@
 
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{无题一}
+\poemtitle{将军吟{\small·}风雪猎}
 \settowidth{\versewidth}{风仍劲, 雪正紧}
 \begin{verse}[\versewidth]
 风仍劲，雪正紧\\
@@ -73,7 +73,7 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{无题二}
+\poemtitle{将军吟{\small·}梦中泪}
 \settowidth{\versewidth}{风仍劲, 雪正紧}
 \begin{verse}[\versewidth]
 冷风浓，残花败\\
@@ -86,7 +86,7 @@
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
-\poemtitle{无题三}
+\poemtitle{夜独行}
 \settowidth{\versewidth}{风仍劲, 雪正紧}
 \begin{verse}[\versewidth]
 雨夜冷，街角寂\\
