add more girls poems

--- a/books/girls.tex
+++ b/books/girls.tex
@@ -43,6 +43,26 @@
 \end{verse}
 \newpage
 
+\poemtitle{长发}
+\settowidth{\versewidth}{你绝望的，踩着}
+\begin{verse}[\versewidth]
+
+你固执的认为\\
+一寸青丝，一寸思念\\
+~\\
+你把青丝盘起\\
+待那长发齐耳\\
+待那长发及腰\\
+待那长发着地\\
+~\\
+待那\\
+你的世界\\
+只剩下思念
+
+
+
+\end{verse}
+
 \poemtitle{悲剧{\small·}喜剧}
 \settowidth{\versewidth}{你绝望的，踩着}
 \begin{verse}[\versewidth]
