draft version one

--- a/books/autumn.tex
+++ b/books/autumn.tex
@@ -18,7 +18,7 @@
 \settowidth{\versewidth}{秋风不知离别味}
 \begin{verse}[\versewidth]
 秋风不知离别味\\
-吹尽落叶为谁别？\\
+吹尽落叶为谁别\\
 他年再遇真君子\\
 清酒一杯话当年
 \end{verse}
@@ -31,7 +31,7 @@
 东北望\\
 怎奈故园东风无力\\
 ~\\
-可知？\\
+可知\\
 江南之秋秋几许
 \end{verse}
 
@@ -50,7 +50,7 @@
 
 \renewcommand{\poemtoc}{section}
 \poemtitle{秋天的，最后一片叶}
-\settowidth{\versewidth}{无所事事，等待凋零}
+\settowidth{\versewidth}{做梦都想，狂风中飘去}
 \begin{verse}[\versewidth]
 我是那\\
 秋天的最后一片叶\\
@@ -71,7 +71,7 @@
 知了告别多时，从此没有了叹息\\
 ~\\
 风已吹起，没人送行\\
-空旷的天空，只有我在飘逸\\
+空旷的天空，只有我在呼吸\\
 若是离开枝头，不知飘向何地\\
 ~\\
 我已无力，遮风挡雨\\
