--- a/books/goodbye.tex
+++ b/books/goodbye.tex
@@ -19,7 +19,7 @@
 
 风且住，水莫流。此时凝睇，最是春好处\\
 杯无酒，还回头。此地风景，最该常驻留\\
-花正谢，人已走。此处相逢，何时重聚首？\\
+花正谢，人已走。此处相逢，何时重聚首\\
 别悲伤，重抖擞。此去经年，仍可梦中游\\
 \end{verse}
 
@@ -29,7 +29,7 @@
 \begin{verse}[\versewidth]
 
 心怀大志不偏安\\
-青梅煮酒与谁论？\\
+青梅煮酒与谁论\\
 莫道前路风景异\\
 骄阳明月仍在天
 \end{verse}
@@ -39,7 +39,7 @@
 \settowidth{\versewidth}{心怀大志不偏安}
 \begin{verse}[\versewidth]
 遥看前路似蜀道\\
-骏马十驾何它惧？\\
+骏马十驾何它惧\\
 我摘天星为君引\\
 凿它一条上青天
 \end{verse}
@@ -50,10 +50,10 @@
 \settowidth{\versewidth}{MOS数载功勋卓}
 \begin{verse}[\versewidth]
 
-\makebox[77pt][s]{MOS数载功勋卓}\\
-\makebox[77pt][s]{又攀RAC另一峰}\\
-\makebox[77pt][s]{放眼天下众男儿}\\
-\makebox[77pt][s]{谁言巾帼让须眉}？
+\makebox[83pt][s]{MOS数载功勋卓}\\
+\makebox[83pt][s]{又攀RAC另一峰}\\
+\makebox[83pt][s]{放眼天下众男儿}\\
+\makebox[83pt][s]{谁言巾帼让须眉}
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
@@ -63,10 +63,10 @@
 
 笑，笑，笑\\
 笑半百甲骨，如狼似虎\\
-狮子开口敢不从？\\
+狮子开口敢不从\\
 ~\\
 错，错，错\\
 错少年风流，莫能长驻\\
-心中有梦怎能阻?\\
+心中有梦怎能阻\\
 \end{verse}
 
