--- a/books/moon.tex
+++ b/books/moon.tex
@@ -16,7 +16,7 @@
 \settowidth{\versewidth}{世人皆谓蜀道难}
 \begin{verse}[\versewidth]
 世人皆谓蜀道难\\
-我笑何人曾试攀？\\
+我笑何人曾试攀\\
 待与天公千杯醉\\
 一梦踏尽蜀汉山
 \end{verse}
@@ -38,7 +38,7 @@
 群英邀我共赴会\\
 天公怎敢不作美\\
 纵使漫天飞雪舞\\
-寒江独钓岂一人?
+寒江独钓岂一人
 \end{verse}
 
 \renewcommand{\poemtoc}{section}
@@ -88,7 +88,7 @@
 \poemtitle{唱和}
 \settowidth{\versewidth}{弦断声可续}
 \begin{verse}[\versewidth]
-弦断声可续？\\
+弦断声可续\\
 古调谁人听\\
 甚好虫鸟声\\
 仍唱天地间
