--- a/books/poetry.tex
+++ b/books/poetry.tex
@@ -8,7 +8,7 @@
 
 \centerline{\emph{\scriptsize{小组技痒，向Dev下挑战书。于是老夫捉刀，豪言片语}}}
 
-\makebox[87pt][s]{秋高气爽\ \ QA射雕}\\
+\makebox[95pt][s]{秋高气爽\ \ QA射雕}\\
 铁骑所踏\ \ 无不臣服\\
 甲骨诸国\ \ 兵败千里\\
 今统良将精兵\ \ bug万千\\
@@ -55,7 +55,7 @@
 ~\\
 溪畔弯柳青青舒\\
 一波绿水卷春来\\
-能不忆故乡？
+能不忆故乡
 \end{verse}
 
 
@@ -91,7 +91,7 @@
 \begin{verse}[\versewidth]
 雨夜冷，街角寂\\
 雨珠落地雨花溅\\
-雨中谁独行？\\
+雨中谁独行\\
 ~\\
 热泪涌，深巷幽\\
 泪珠成串泪如瀑\\
