--- a/books/travel.tex
+++ b/books/travel.tex
@@ -7,7 +7,7 @@
 
 久仰桂林阳朔名，今朝有缘得相见\\
 导游一直高声语，先抑后扬众君喜\\
-银子岩里曲径幽，火树银花可知否?\\
+银子岩里曲径幽，火树银花可知否\\
 最喜母爱头顶悬，只因母乳润丝间\\
 古道野人老习俗，名副其实女士先\\
 遇龙为何舟自横，原是天兵下人间\\
