--- a/books/poem/acknowledgement.tex
+++ b/books/poem/acknowledgement.tex
@@ -4,4 +4,4 @@
 
 在悠长的人类长河里，方圆亿万公里的土地上，与你们的相遇，终将如东逝之春水，渐渐远去。我们的记忆，也会像落叶一般，慢慢凋零。于是，我肆无忌惮的在天空中挥毫，大地上涂抹，在险峰之巅高歌，夜深之时低吟。只为了那一刻，踏沙存迹，戏水留痕。
 
-这些诗篇，送给你们。
+这些文字，送给你们。
