--- a/books/poem/preface.tex
+++ b/books/poem/preface.tex
@@ -2,9 +2,9 @@
 
 古人云：诗言志，文载道。杜甫也诗云：文章千古事，得失寸心知。似乎作诗填词，写文章，乃阳春白雪，居庙堂之高，凡夫俗子不能，也不可轻易染指的。
 
-虽然从小学就开始背诵“锄禾日当午”，“离离远上草”等等唐诗宋词，但是我不能读懂那些熟悉的文字到底写的是什么意思。我也不懂徐志摩的《再别康桥》，食指的《相信未来》，戴望舒的《雨巷》，舒婷的《致橡树》，海子的《春暖花开》，郑愁予的《错误》，艾青的《雪落在中国的土地上》。但是离别之时，我也会挥一挥衣袖，不带走一片云彩；黯然神伤的那刻，也满怀深情的写着，相信未来；在阴雨连绵的午后，也希望逢着一个丁香一样的姑娘；在春日来临之际，也曾幻想面朝大海，春暖花开；离开江南这么多年了，那达达的马蹄声，仍旧那么地响彻在我的记忆里。
+虽然很小就开始背诵“锄禾日当午”，“离离远上草”，“老夫聊发少年狂”，“闻说双溪春尚好”等等唐诗宋词，但是我不能读懂那些熟悉的文字到底写的是什么意思。我也不懂徐志摩的《再别康桥》，食指的《相信未来》，戴望舒的《雨巷》，舒婷的《致橡树》，海子的《春暖花开》，郑愁予的《错误》，艾青的《我爱这土地》。但是离别之时，我也会挥一挥衣袖，不带走一片云彩；黯然神伤的那刻，也满怀深情的写着，相信未来；在阴雨连绵的午后，也希望逢着一个丁香一样的姑娘；在春日来临之际，也曾幻想面朝大海，春暖花开；离开江南这么多年了，那达达的马蹄声，仍旧那么地响彻在我的记忆里。
 
-忆着《忆江南》的春来江水绿如蓝，便试了《忆故乡》；读着《沙扬娜拉》的道一声珍重，写了《温柔》；翻着《林教头风雪山神庙》的那雪正下的紧、《塞下曲》的大雪满弓刀，有了《风雪猎》；看着《菩萨蛮》的懒起画峨眉，涂了《伊声》；念着《蜀道难》，作了《醉梦山》；听着《走在雨中》，填了《夜独行》；吟着《雨霖铃》的多情自古伤离别、《别董大》的莫愁前路无知己，挥手《离别》。就这样乱涂乱画，独自娱乐。
+忆着《忆江南》的春来江水绿如蓝，便试了《忆故乡》；读着《沙扬娜拉》的道一声珍重，写了《温柔》；翻着《林教头风雪山神庙》的那雪正下得紧、《塞下曲》的大雪满弓刀，有了《风雪猎》；看着《菩萨蛮》的懒起画峨眉，涂了《伊声》；念着《蜀道难》，作了《醉梦山》；听着《走在雨中》，填了《夜独行》；吟着《雨霖铃》的多情自古伤离别、《别董大》的莫愁前路无知己，挥手《离别》。就这样乱涂乱画，独自娱乐。
 
 言志和千古事估计和我没缘了。也不敢妄自菲薄，说这些是诗词。这些文字，只不过是平常日子的一次心跳，一次感触，一次悸动。
 
