--- a/books/poem/poems.tex
+++ b/books/poem/poems.tex
@@ -64,7 +64,12 @@
 \newpage
 
 
+\onehalfspacing
+\addtolength{\parskip}{3pt}
+\setlength{\parindent}{2em}
 \input{copyright}
+\singlespacing
+\setlength{\parskip}{0pt}
 \tableofcontents
 
 \onehalfspacing
