--- a/books/poem/preface.tex
+++ b/books/poem/preface.tex
@@ -6,6 +6,6 @@
 
 忆着《忆江南》的春来江水绿如蓝，便试了《忆故乡》；读着《沙扬娜拉》的道一声珍重，写了《温柔》；翻着《林教头风雪山神庙》的那雪正下得紧、《塞下曲》的大雪满弓刀，有了《风雪猎》；看着《菩萨蛮》的懒起画峨眉，涂了《伊声》；念着《蜀道难》，作了《醉梦山》；听着《走在雨中》，填了《夜独行》；吟着《雨霖铃》的多情自古伤离别、《别董大》的莫愁前路无知己，挥手《离别》。就这样乱涂乱画，独自娱乐。
 
-言志和千古事估计和我没缘了。也不敢妄自菲薄，说这些是诗词。这些文字，只不过是平常日子的一次心跳，一次感触，一次悸动。
+言志和千古事估计和我没缘了。也不敢妄自尊大，说这些是诗词。这些文字，只不过是平常日子的一次心跳，一次感触，一次悸动。
 
 一个声音曾经在耳边回荡：公子便是矫情。不敢矫情，只是用心罢了。
