--- a/_posts/2014-08-23-golang.md
+++ b/_posts/2014-08-23-golang.md
@@ -12,7 +12,7 @@ tags:
 
 项目中的需求很简单，从RabbitMQ读数据，然后写入Redis当中，当然这个量比较大，似乎用goroutine是一个好的解决办法。
 
-所以刚开始的逻辑是，从MQ读取数据，然后对每个数据都用一个goroutine处理。goroutine从Redis Pool里面取Redis connection，然后写数据到Redis。Redis go library[redigo](https://github.com/garyburd/redigo)[^1]，库中提供Redis Pool的API，可以很方便的管理Redis connection。
+所以刚开始的逻辑是，从MQ读取数据，然后对每个数据都用一个goroutine处理。goroutine从Redis Pool里面取Redis connection，然后写数据到Redis。Redis go library [redigo](https://github.com/garyburd/redigo)[^1]，库中提供Redis Pool的API，可以很方便的管理Redis connection。
 
 ```go
  
@@ -29,7 +29,7 @@ func main(){
 ```
 
 # 问题1: no such host
-结果一跑，就出现很多 "no such host" 错误，google了一下，发现是glibc的[bug](https://code.google.com/p/go/issues/detail?id=3575)[^2]。当并发很高的时候，bglibc库中查找DNS的代码就会出错。根据bug描述，要么升级glibc到2.20(但是2.20版本还没有发布)，要么重新编译Go的net库。于是重新编译了Go的net库后，新问题又出现了。
+结果一跑，就出现很多 "no such host" 错误，google了一下，发现是glibc的[bug](https://code.google.com/p/go/issues/detail?id=3575)[^2]。当并发很高的时候，glibc库中查找DNS的代码就会出错。根据bug描述，要么升级glibc到2.20(但是2.20版本还没有发布)，要么重新编译Go的net库。于是重新编译了Go的net库后，新问题又出现了。
 
 # 问题2: redis connection timeout
 这次是跑着跑着，Redis很多connection都timeout了，于是仔细看了一下redigo的Pool文档，发现默认Pool是没有大小限制的，如果Pool里面没有connection，会一直创建。难怪会timeout，应该是MQ数据太多，起了太多的goroutine，所以就会创建很多Redis client，Redis Server顶不住了。
@@ -66,5 +66,5 @@ for <whatever> {
 [^2]: [no such host bug](https://code.google.com/p/go/issues/detail?id=3575)
 [^3]: [redigo pool issue](https://github.com/garyburd/redigo/issues/56)
 [^4]: [vitess pool](https://github.com/youtube/vitess/tree/master/go/pools)
-[^5]: [profile go](blog.golang.org/profiling-go-programs)
+[^5]: [profile go](http://blog.golang.org/profiling-go-programs)
 [^6]: [goroutine stack memory issue](https://code.google.com/p/go/issues/detail?id=8287)
