--- a/books/prose/book.tex
+++ b/books/prose/book.tex
@@ -1,11 +1,11 @@
-\chapter{书意点滴}
+\chapter{书生意气}
 \section*{一个傻子的故事}
 \addcontentsline{toc}{section}{一个傻子的故事}
 \markright{一个傻子的故事}
 
 缘由
 
-虽然无聊的时候我喜欢哼哼几句，涂抹几笔，但是我是绝不敢写影评，读后感之类的文章的。一方面看了所谓影评家、文艺评论家的文章，实在不敢苟同，总觉得他们在自个儿玩味自己的感觉;另一方面，其实很多电影，小说我是看不懂的，我根本不知道他们要说啥玩意，所以我不敢写，因为我不知道写什么东西。关于第二点，我觉得中国教育立了大功，小时候老是被逼着写调子一样的读后感，搞到现在一看不懂文章，二想写读后感都是一样的思维，三没啥想法了。
+虽然无聊的时候我喜欢哼哼几句，涂抹几笔，但是我是绝不敢写影评，书评之类的文章的。一方面看了所谓影评家、文艺评论家的文章，实在不敢苟同，总觉得他们在自个儿玩味自己的感觉;另一方面，其实很多电影，小说我是看不懂的，我根本不知道他们要说啥玩意，所以我不敢写，因为我不知道写什么东西。关于第二点，我觉得中国教育立了大功，小时候老是被逼着写调子一样的读后感，搞到现在一看不懂文章，二想写读后感都是一样的思维，三没啥想法了。
 
 但是翻了一些书，看了一些电影，总有些思想的青烟在湛蓝的天空飘着，飘着，然后慢慢的淡化着，淡化着，消失了，不曾留下半点痕迹。
 
