--- a/books/prose/prose.tex
+++ b/books/prose/prose.tex
@@ -59,7 +59,7 @@
 \vspace*{\fill} 
 \begin{quote} 
 \centering 
-不要假设昨天，不要承诺明天。因为，生活的秒针，永远滴答在今天
+不要假设昨天，不要承诺明天。因为生活的秒针，永远滴答在今天
 \end{quote}
 \vspace*{\fill}
 \newpage
