add tags in lvs-dr

--- a/_posts/2017-08-20-lvs-dr.md
+++ b/_posts/2017-08-20-lvs-dr.md
@@ -5,6 +5,7 @@ description: ""
 category:  IT
 tags: 
     - LVS
+    - Linux
 ---
 
 最近一年，接触了大名鼎鼎的[LVS](http://linuxvirtualserver.org/)，碰到一些问题，记录一下。由于工作中只用到 DR 模式，所以只写 DR 模式的一些问题。
