add xv6 homework stack

--- a/_posts/2017-08-20-lvs-dr.md
+++ b/_posts/2017-08-20-lvs-dr.md
@@ -131,13 +131,13 @@ localnode 这个问题，有两种解决方案。
 
 * Director1 配置 iptables ，除了 Director2 以外的包，都设置 mask 为3。
 
-```
+```bash
 # iptables  -t mangle -I PREROUTING -d $VIP -p tcp -m tcp --dport $VPORT -m mac \ 
 ! --mac-source $MAC_Director2 -j MARK --set-mark 0x3 
 ```
 * Director2 配置 iptables ，除了 Director1 以外的包，都设置 mask 为4。
 
-```
+```bash
 # iptables  -t mangle -I PREROUTING -d $VIP -p tcp -m tcp --dport $VPORT -m mac \ 
 ! --mac-source $MAC_Director1 -j MARK --set-mark 0x4
 ```
