--- a/_posts/2017-10-22-xv6-syscall_1.md
+++ b/_posts/2017-10-22-xv6-syscall_1.md
@@ -41,11 +41,11 @@ x86共有4个特权级，但是一般只会用到2个特权级，内核特权级
 3. 对于软中断 int n 和单步中断 int3，以及 into 引发的中断，当前的 CPL <= 门描述符的 DPL
 
 # 系统调用
-## 系统调用号
-64号中断处理所有的系统调用，所以每个系统调用需要一个数字来区分，`syscall.h` 定义来每一个系统调用号
+## syscall num
+64号中断处理所有的系统调用，所以每个系统调用需要一个数字来区分，`syscall.h` 定义来每一个 syscall num
 
 ## 代码调用 syscall
-在 `usys.S` 中实现了系统调用，首先声明系统调用名是global的，所以用户程序链接了 `usys.o` 之后，系统调用名对用户程序就可见了。接着定义系统调用的过程，首先将系统调用号存到寄存器 `eax` 中，然后执行 `int 0x40`，触发64号中断。
+在 `usys.S` 中实现了系统调用，首先声明系统调用名是global的，所以用户程序链接了 `usys.o` 之后，系统调用名对用户程序就可见了。接着定义系统调用的过程，首先将 syscall num 存到寄存器 `eax` 中，然后执行 `int 0x40`，触发64号中断。
 
 比如 `mkdir.asm` 中，用户程序调用 `syscall:mkdir` ，汇编代码显示这是一条 `call 350` 指令
 
@@ -178,7 +178,7 @@ struct trapframe {
 ### interrupt handler
 接下来内核就会调整到interrupt handler去执行。上面讲到handler定义在 `vectors.S` 中，如果中断没有 error code，就会push 0，然后 push 中断号。如果有error code，上面讲到 CPU 会自动把 error code push到栈中。接下来跳转到 `alltraps` 运行。
 
-`trapasm.S:alltraps` 主要是用来存储 `struct trapframe` 前半部分信息。虽然栈发生了切换（ss 和 esp 发生变化），但是其它寄存器还是旧进程的信息，所以 `alltraps` 会将这些信息都保存下来，比如 eax 存放的是系统调用号。
+`trapasm.S:alltraps` 主要是用来存储 `struct trapframe` 前半部分信息。虽然栈发生了切换（ss 和 esp 发生变化），但是其它寄存器还是旧进程的信息，所以 `alltraps` 会将这些信息都保存下来，比如 eax 存放的是 syscall num。
 
 interrupt handler 是在内核态运行的，除了切换栈，保存上下文，还需要将各种段寄存器切换到内核段中。前面讲到 cs 和 ss 已经切换完毕，还需要设置 `ds,es,fs,gs`。之后栈的结果如下：
 
