update xv6 stack

--- a/_posts/2017-08-26-xv6-stack.md
+++ b/_posts/2017-08-26-xv6-stack.md
@@ -130,6 +130,15 @@ add    0xc(%ebp),%ed
 3. 恢复函数栈上下文 `pop %ebp`
 4. `ret` 恢复 `%eip`
 
+### 恢复%esp
+`bootmain` 中，压栈函数用到的寄存器后，通过 `sub    $0x2c,%esp` 开辟了栈空间。在函数结束的时候，通过 `add    $0x2c,%esp` 恢复了 %esp 的值。
+
+如果函数结束的时候，没有恢复 %esp 的值，有时候通过 `leave` 指令恢复 %esp 的值，这个指令相当于
+
+```
+mov %ebp, %esp
+pop %ebp
+```
 
 # Reference
 [^1]:[PC的“有趣”设计：A20](http://blog.theerrorlog.com/the-funny-design-of-a20.html)
